--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fishing Score Forecast</title>
+    <title>Оценка условий рыбалки</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,15 +75,15 @@
 </head>
 <body>
     <header>
-        <h1>Прогноз для рыбалки</h1>
+        <h1>Оценка условий рыбалки</h1>
     </header>
     <main>
         <section id="fishing-score">
-            **<h2>Оценка условий рыбалки</h2>*** <h3>День 1: 22 октября</h3>	+ <p>Фаза луны: убывающая полнолуная (58%), что может не быть идеальным условием для рыбалки.</p>	<ul>		<li><strong>Приливы и отливы:</strong></li>			<ul>				<li>+ Отлив: 4:41 утра (не очень хорошо)</li>				<li>+ Плисс: 10:31 утра (хороший, но затем вода снова опустится)</li>				<li>+ Отлив: 3:45 вечера (плохо)</li>				<li>+ Прилив: 9:20 вечера (хороший)</li>			</ul>		<li><strong>Ветер и волны:</strong></li>			<ul>				<li>+ Ветер и волны завтра не идеально подходят для рыбалки.</li>			</ul>		<li><strong>Прогноз погоды:</strong></li>			<ul>				<li>в целом приятная погода.</li>			</ul>	+ <p>Оценка: **60%**</p>* <h3>День 2: 23 октября</h3>	+ <p>Фаза луны: похожая на предыдущий день, что может все еще повлиять на условия рыбалки.</p>	<ul>		<li><strong>Приливы и отливы:</strong></li>			<ul>				<li>+ Отлив: 5:44 утра (плохо)</li>				<li>+ Плисс: 11:38 утра (хороший, но затем вода снова опустится)</li>				<li>+ Отлив: 3:49 вечера (не очень хорошо)</li>				<li>+ Прилив: 11:05 вечера (хороший)</li>			</ul>		<li><strong>Ветер и волны:</strong></li>			<ul>				<li>+ Ветер немного утих, что сделало условия более благоприятными.</li>			</ul>		<li><strong>Прогноз погоды:</strong></li>			<ul>				<li>в целом приятная погода.</li>			</ul>	+ <p>Оценка: **65%**</p>* <h3>День 3: 24 октября</h3>	+ <p>Фаза луны: все еще не идеально для рыбалки.</p>	<ul>		<li><strong>Приливы и отливы:</strong></li>			<ul>				<li>+ Отлив: 8:10 утра (не очень хорошо)</li>			</ul>		<li><strong>Ветер и волны:</strong></li>			<ul>				<li>+ Ветер может немного усилиться, но волны все еще управляемы.</li>			</ul>		<li><strong>Прогноз погоды:</strong></li>			<ul>				<li>в целом приятная погода.</li>			</ul>	+ <p>Оценка: **55%**</p><em>Обратите внимание, что эти оценки являются субъективными и основаны на общих условиях рыбалки. Успех вашей рыбалки будет зависеть от различных факторов, включая ваше местоположение в Израиле, конкретные воды, в которых вы рыбачите, и тип рыбы, на которую вы нацелены.</em>
+            **<h2>Рыбалка в Израиле</h2>***<h3>День 1: 22 октября</h3>*<p>Фаза луны: убывающая полнолуная (58%), что может не быть идеальным условием для рыбалки.</p><ul>	<li><strong>Отлив:</strong> 4:41 утра (не очень хорошо)</li>	<li><strong>Прилив:</strong> 10:31 утра (хорошо, но затем вода снова опустится)</li>	<li><strong>Отлив:</strong> 3:45 вечера (плохо)</li>	<li><strong>Прилив:</strong> 9:20 вечера (хорошо)</li></ul><p>Оценка: <strong>60%</strong></p>*<h3>День 2: 23 октября</h3>*<p>Фаза луны: похожая на предыдущий день, что может все еще повлиять на условия рыбалки.</p><ul>	<li><strong>Отлив:</strong> 5:44 утра (плохо)</li>	<li><strong>Прилив:</strong> 11:38 утра (хорошо, но затем вода снова опустится)</li>	<li><strong>Отлив:</strong> 3:49 вечера (не очень хорошо)</li>	<li><strong>Прилив:</strong> 11:05 вечера (хорошо)</li></ul><p>Оценка: <strong>65%</strong></p>*<h3>День 3: 24 октября</h3>*<p>Фаза луны: все еще не идеально для рыбалки.</p><ul>	<li><strong>Отлив:</strong> 8:10 утра (не очень хорошо)</li></ul><p>Оценка: <strong>55%</strong></p><p>Обратите внимание, что эти оценки являются субъективными и основаны на общих условиях рыбалки.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 21, 2024, 11:15 PM</p>
+        <p>Generated with AI Oct 21, 2024, 11:31 PM</p>
     </footer>
 </body>
 </html>
