--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            <figure class="table"><h2>ניקודי דייג ל-22, 23 ו-24 באוקטובר</h2><ol>  <li><strong>22 באוקטובר:</strong> 50%</li>  <li><strong>23 באוקטובר:</strong> 40%</li>  <li><strong>24 באוקטובר:</strong> 60%</li></ol><p>יש לזכור שניקודים אלה מבוססים על המידע שניתן ואינם בהכרח מייצגים את חוויית הדייג הספציפית שלך. <br />  <em>1.6/10</em></p><figure class="table"></figure>
+            <font size="4">**מדריק של 3 ימים:**</font>### **22 באוקטובר**#### **שלב הירח:**<i>ירח פוחת (58.93% מהדרך בין כדור הארץ לשמש)</i>#### **תחזית גאות ושפל:**<ul style="list-style-type:square;"><li>שפל: 15:45 אחר הצהריים בגובה של -0.06 מטרים</li><li>גאות בשעה 20:20 בערב בגובה של 0.11 מטרים.</li><li> גובה הגלים וכיוונם הם יחסית רגועים (גובה של 1.14 מטרים מצפון-מערב)</li></ul>#### **תחזית מזג אוויר:**<i>טמפרטורות חמימות, לחות נמוכה ורוח עדינה</i>#### **ניקוד:**<font color="blue">50%</font>### **23 באוקטובר**#### **שלב הירח:**<i>ירח פוחת (58.93% מהדרך בין כדור הארץ לשמש)</i>#### **תחזית גאות ושפל:**<ul style="list-style-type:square;"><li>שפל: 08:10 בבוקר בגובה של -0.06 מטרים</li><li> גאות בשעה 14:24 בצהריים בגובה של 0.04 מטרים.</li><li> גובה הגלים הוא הרגוע ביותר (גובה של 1.96 מטרים מצפון-מערב)</li></ul>#### **תחזית מזג אוויר:**<i>טמפרטורות חמימות, לחות נמוכה ורוח עדינה</i>#### **ניקוד:**<font color="blue">40%</font>### **24 באוקטובר**#### **שלב הירח:**<i>ירח פוחת (58.93% מהדרך בין כדור הארץ לשמש)</i>#### **תחזית גאות ושפל:**<ul style="list-style-type:square;"><li>שפל: 08:10 בבוקר בגובה של -0.06 מטרים</li><li> גאות בשעה 14:24 בצהריים בגובה של 0.04 מטרים.</li><li> גובה הגלים הוא הרגוע ביותר (גובה של 1.96 מטרים מצפון-מערב)</li></ul>#### **תחזית מזג אוויר:**<i>טמפרטורות חמימות, לחות נמוכה ורוח עדינה</i>#### **ניקוד:**<font color="blue">60%</font>---**סיכוי הדירוג:*** 22 באוקטובר: <font color="blue">50%</font>* 23 באוקטובר: <font color="blue">40%</font>* 24 באוקטובר: <font color="blue">60%</font>---**הערות הדירוג.**<font size="3">"ניקודי כאלה, המבוססים על המידע שניתן ואינם בהכרח מייצגים את חוויית הדייג שלך.
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 1:45 PM</p>
+        <p>Generated with AI Oct 22, 2024, 1:47 PM</p>
     </footer>
 </body>
 </html>
