--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        h1, h2, h3 {
+        h2, h3 {
             color: #333;
             margin-bottom: 0.5em;
         }
@@ -63,6 +63,10 @@
             font-weight: bold;
         }
 
+        h1 {
+           color: #fff;
+        }
+
         footer {
             background-color: #333;
             color: #fff;
@@ -79,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **Оценка рыбалки**<h2>Результаты</h2><h3>День 1: Среда, 23 октября</h3><p>Оценка: <strong>42%</strong></p><ul>	<li><strong>Фаза Луны:</strong> Убывающая Gibbous (58,93% освещения)</li>	<li><strong>Прогноз прилива:</strong> Высокий прилив в 11:38 и низкий в 3:49 с умеренной волной</li>	<li><strong>Прогноз погоды:</strong> Высокая температура 26,5°C и умеренная влажность</li>	<li><strong>Морские условия:</strong> Ветровые волны 1,04 метра и период 4,55 секунды</li></ul><h3>День 2: Четверг, 24 октября</h3><p>Оценка: <strong>58%</strong></p><ul>	<li><strong>Фаза Луны:</strong> Убывающая Gibbous (44,93% освещения)</li>	<li><strong>Прогноз прилива:</strong> Высокий прилив в 11:05 и низкий в 8:10 с умеренной волной</li>	<li><strong>Прогноз погоды:</strong> Высокая температура 26,7°C и умеренная влажность</li>	<li><strong>Морские условия:</strong> Ветровые волны 0,46 метра и период 2,9 секунды</li></ul><h3>День 3: Пятница, 25 октября</h3><p>Оценка: <strong>58%</strong></p><ul>	<li><strong>Фаза Луны:</strong> Убывающая Gibbous (30,93% освещения)</li>	<li><strong>Прогноз прилива:</strong> Высокий прилив в 14:24 и низкий в 11:05 с умеренной волной</li>	<li><strong>Прогноз погоды:</strong> Высокая температура 26,7°C и умеренная влажность</li>	<li><strong>Морские условия:</strong> Ветровые волны 0,46 метра и период 2,9 секунды</li></ul>
+            **Результаты оценки трёх дней для рыбалки в Израиле:**<h2>Результаты оценки трёх дней</h2><p>На основе предоставленной информации я оценил каждый из следующих трёх дней по шкале от 0 до 100 процентов, принимая во внимание такие факторы, как фазы Луны, прогноз приливов и отливов, высоту волн, скорость ветра и прогноз погоды.</p><ul>  <li><strong>Понедельник, 22 октября:</strong> Оценка: <strong>60%</strong></li>  <li><strong>Вторник, 23 октября:</strong> Оценка: <strong>60%</strong></li>  <li><strong>Среда, 24 октября:</strong> Оценка: <strong>65%</strong></li></ul><p>На основе этих оценок можно сказать, что вторник и среда являются наиболее подходящими днями для рыбалки в Израиле.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 9:02 AM</p>
+        <p>Generated with AI Oct 22, 2024, 3:42 PM</p>
     </footer>
 </body>
 </html>
