--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            Here is the content wrapped with HTML tags:<h2>דף העיניים של מדריך הדיג</h2><h3>יום שני (22 באוקטובר 2024)</h3><p>שלב הירח: ירח דקיק מתקרב (58.93% הארה), אשר אינו אידיאלי לדייג.</p><ul>  <li><strong>תחזית גאות ושפל:</strong> שפל גבוה בשעה 20:20, עם שפל קודם במהלך היום.</li>  <li><strong>תנאי גלים וזרם:</strong> הגלים ניתנים לשליטה, אך קיים זרם קל הנע נגד הגלים.</li>  <li><strong>מזג אוויר:</strong> שמש וחם, אשר טוב לדייג.</li></ul><p>ניקוד: 60%</p><h3>יום שלישי (23 באוקטובר 2024)</h3><p>שלב הירח: ירח דקיק מתקרב (45.36% הארה), עדיין לא אידיאלי לדייג.</p><ul>  <li><strong>תחזית גאות ושפל:</strong> שני שפל במהלך היום, עם שפל גבוה בשעה 20:20.</li>  <li><strong>תנאי גלים וזרם:</strong> הגלים מעט רגועים יותר מהיום הקודם, אך עדיין קיים זרם קל הנע נגדיהם.</li>  <li><strong>מזג אוויר:</strong> דומה ליום שני, שמש וחם.</li></ul><p>ניקוד: 65%</p><h3>יום רביעי (24 באוקטובר 2024)</h3><p>שלב הירח: ירח דקיק מתקרב (31.79% הארה), עדיין לא אידיאלי לדייג.</p><ul>  <li><strong>תחזית גאות ושפל:</strong> שפל בשעה 8:10 בבוקר, ואחריו שפל גבוה רק 35 דקות לאחר מכן.</li>  <li><strong>תנאי גלים וזרם:</strong> הגלים ניתנים לשליטה, אך קיים זרם קל הנע נגד הגלים.</li>  <li><strong>מזג אוויר:</strong> שמש וחם.</li></ul><p>ניקוד: 70%</p><p>יש לזכור כי ציונים אלה מבוססים על הנתונים שניתנו ועלולים שלא לשקף את חוויית הדיג בפועל.</p>
+            **<h2>ציונים לשלושת הימים הבאים</h2>*** **<h3>יום שני, 22 באוקטובר</h3>**	+ <p><strong>ציון: 60%</strong></p>	<ul>		<li>שלב הירח: 40%</li>		<li>תחזית גאות ושפל: 60%</li>		<li>גובה הגלים: 30%</li>		<li>תחזית מזג אוויר: 80%</li>	</ul>* **<h3>יום שלישי, 23 באוקטובר</h3>**	+ <p><strong>ציון: 60%</strong></p>	<ul>		<li>שלב הירח: 40%</li>		<li>תחזית גאות ושפל: 50%</li>		<li>גובה הגלים: 70%</li>		<li>תחזית מזג אוויר: 80%</li>	</ul>* **<h3>יום רביעי, 24 באוקטובר</h3>**	+ <p><strong>ציון: 65%</strong></p>	<ul>		<li>שלב הירח: 40%</li>		<li>תחזית גאות ושפל: 60%</li>		<li>גובה הגלים: 70%</li>		<li>תחזית מזג אוויר: 80%</li>	</ul>**<h2>ערך סופי</h2>*** **<p><strong>60% - 65% : הימים המתאימים ביותר לדייג</strong></p>**
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 2:59 PM</p>
+        <p>Generated with AI Oct 22, 2024, 3:43 PM</p>
     </footer>
 </body>
 </html>
