--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **Результаты оценки трёх дней для рыбалки в Израиле:**<h2>Результаты оценки трёх дней</h2><p>На основе предоставленной информации я оценил каждый из следующих трёх дней по шкале от 0 до 100 процентов, принимая во внимание такие факторы, как фазы Луны, прогноз приливов и отливов, высоту волн, скорость ветра и прогноз погоды.</p><ul>  <li><strong>Понедельник, 22 октября:</strong> Оценка: <strong>60%</strong></li>  <li><strong>Вторник, 23 октября:</strong> Оценка: <strong>60%</strong></li>  <li><strong>Среда, 24 октября:</strong> Оценка: <strong>65%</strong></li></ul><p>На основе этих оценок можно сказать, что вторник и среда являются наиболее подходящими днями для рыбалки в Израиле.</p>
+            **<h2>Условия Рыбалки на Три Дня</h2>**### <h3>Понедельник, 23 Октября</h3>*   **Фаза Луны:** убывающая gibbous (на 59% от Земли)*   **Приливы:**    *   Отлив: около 5:44 утра    *   Прилив: около 11:38 утра    *   Отлив: около 3:49 вечера*   **Прогноз Высоты Волн:** слегка уменьшаются, максимальная высота около 1,8 метра*   **Погода:** приятный день с температурой до 26,6°C (79,9°F) и до 16°C (60,8°F)*   **Оценка:** 70/100### <h3>Вторник, 24 Октября</h3>*   **Фаза Луны:** убывающая gibbous (на 59% от Земли)*   **Приливы:**    *   Прилив: около 10:05 вечера    *   Отлив: около 8:10 утра в четверг*   **Прогноз Высоты Волн:** более спокойное море с заметным уменьшением высоты волн*   **Погода:** приятный день с температурой до 26,6°C (79,9°F) и до 16,6°C (61,9°F)*   **Оценка:** 80/100### <h3>Среда, 25 Октября</h3>*   **Фаза Луны:** убывающая gibbous (на 59% от Земли)*   **Приливы:**    *   Прилив: около 2:24 утра*   **Прогноз Высоты Волн:** более спокойное море с заметным уменьшением высоты волн*   **Погода:** приятный день с температурой до 26,6°C (79,9°F) и до 16°C (60,8°F)*   **Оценка:** 90/100
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 3:42 PM</p>
+        <p>Generated with AI Oct 22, 2024, 3:44 PM</p>
     </footer>
 </body>
 </html>
