--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            Here are the results wrapped with HTML tags:<h2>דיווח תנאי הדיג לשלושת הימים הבאים</h2><h3>יום שני, 23 באוקטובר</h3><p>ניקוד: 70/100</p><ul>    <li><strong>שלב הירח:</strong> ירח מתכווץ (59% מהדרך מכדור הארץ)</li>    <li><strong>זמני הגאות והשפל:</strong></li>        <ul>            <li>גאות נמוכה: סביב 5:44 בבוקר</li>            <li>גאות גבוהה: סביב 11:38 בבוקר</li>            <li>גאות נמוכה: סביב 3:49 אחר הצהריים</li>        </ul>    <li><strong>תחזית מזג האוויר:</strong> יום נעים, 26.6 מעלות צלזיוס (79.9 פרנהייט)</li></ul><h3>יום שלישי, 24 באוקטובר</h3><p>ניקוד: 80/100</p><ul>    <li><strong>שלב הירח:</strong> ירח מתכווץ (59% מהדרך מכדור הארץ)</li>    <li><strong>זמני הגאות והשפל:</strong></li>        <ul>            <li>גאות גבוהה: סביב 10:05 בלילה</li>            <li>גאות נמוכה: סביב 8:10 בבוקר</li>        </ul>    <li><strong>תחזית מזג האוויר:</strong> יום נעים, 26.6 מעלות צלזיוס (79.9 פרנהייט)</li></ul><h3>יום רביעי, 25 באוקטובר</h3><p>ניקוד: 90/100</p><ul>    <li><strong>שלב הירח:</strong> ירח מתכווץ (59% מהדרך מכדור הארץ)</li>    <li><strong>זמני הגאות והשפל:</strong></li>        <ul>            <li>גאות גבוהה: סביב 2:24 בבוקר</li>        </ul>    <li><strong>תחזית מזג האוויר:</strong> יום נעים, 26.6 מעלות צלזיוס (79.9 פרנהייט)</li></ul><h2>תוצאות:</h2><p>בסך הכל, נראה כי הימים הטובים ביותר לדייג הם 24 ו-25 באוקטובר, עם ניקוד של 80% ו-90% בהתאמה.</p>
+            55% (עדיין לא אידיאלי בשל שלב הירח, אך מעט טוב יותר)**
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 3:46 PM</p>
+        <p>Generated with AI Oct 22, 2024, 3:54 PM</p>
     </footer>
 </body>
 </html>
