--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            55% (עדיין לא אידיאלי בשל שלב הירח, אך מעט טוב יותר)**
+            **<h2>אינדקס דיג 3 ימים</h2>****<h3>יום 1: שני, 23 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח אחרון (לא אידיאלי לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-11:38 בבוקר  + גאות ב-3:49 אחר הצהריים  + שפל ב-11:05 בערב</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: 20.7 מעלות צלזיוס (69 מעלות פרנהייט)  + לחות: 25%  + רוח: רוח קלה מרכסון* <strong>דיג:</strong> 40% (תנאים מתונים, אך לא אידיאליים)**<h3>יום 2: שלישי, 24 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח אחרון (עדיין לא אידיאלי לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-8:10 בבוקר  + גאות ב-2:24 לפנות בוקר (בוקר מוקדם)  + שפל ב-10:24 בבוקר</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: צפוי לטפס ל-26.8 מעלות צלזיוס (80 מעלות פרנהייט) במהלך היום  + לחות: עדיין נמוכה למדי, סביב 25%  + רוח: רוח קלה מרכסון* <strong>דיג:</strong> 50% (תנאים טובים יותר מהיום הקודם, אך עדיין לא אידיאליים)**<h3>יום 3: רביעי, 25 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח ראשון (תנאים טובים לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-9:45 בבוקר  + גאות ב-3:15 אחר הצהריים  + שפל ב-10:45 לפנות ערב</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: 25.1 מעלות צלזיוס (77 מעלות פרנהייט)  + לחות: 64%  + רוח: רוח קלה* <strong>דיג:</strong> 70% (תנאים טובים לדייג)
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 22, 2024, 3:54 PM</p>
+        <p>Generated with AI Oct 23, 2024, 9:56 AM</p>
     </footer>
 </body>
 </html>
