--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **<h2>Результаты анализа рыбалки в Израиле на три дня</h2>****<h3>День 1: Вторник, 23 октября</h3>**<ul>	<li><strong>Фаза луны:</strong> убывающая (не идеально для рыбалки)</li>	<li><strong>Прогноз приливов и отливов:</strong>		<ul>			<li>Прилив: 11:38 утра</li>			<li>Отлив: 3:49 вечера</li>			<li>Прилив: 11:05 вечера</li>		</ul>	</li>	<li><strong>Погода:</strong>		<ul>			<li>Температура: 20,7°C (69°F)</li>			<li>Влажность: 25%</li>			<li>Ветер: легкий ветер с северо-востока</li>		</ul>	</li>	<li><strong>Рейтинг рыбалки:</strong> 40% (умеренные условия, но не идеально)</li></ul>**<h3>День 2: Среда, 24 октября</h3>**<ul>	<li><strong>Фаза луны:</strong> убывающая (все еще не идеально для рыбалки)</li>	<li><strong>Прогноз приливов и отливов:</strong>		<ul>			<li>Отлив: 8:10 утра</li>			<li>Прилив: 2:24 утра (ранний утренний прилив)</li>			<li>Отлив: 10:24 утра</li>		</ul>	</li>	<li><strong>Погода:</strong>		<ul>			<li>Температура: ожидается повышение до 26,8°C (80°F) в течение дня</li>			<li>Влажность: все еще относительно низкая, около 25%</li>			<li>Ветер: легкий ветер с северо-востока</li>		</ul>	</li>	<li><strong>Рейтинг рыбалки:</strong> 50% (лучше, чем вчера, но все еще не идеально)</li></ul>**<h3>День 3: Четверг, 25 октября</h3>**<ul>	<li><strong>Фаза луны:</strong> растущая (наконец улучшение для рыбалки)</li>	<li><strong>Прогноз приливов и отливов:</strong>		<ul>			<li>Прилив: 4:25 утра (ранний утренний прилив)</li>			<li>Отлив: 10:40 вечера</li>			<li>Прилив: 5:27 вечера</li>		</ul>	</li>	<li><strong>Погода:</strong>		<ul>			<li>Температура: ожидается повышение до 28,4°C (83°F) в течение дня</li>			<li>Влажность: все еще относительно низкая, около 25%</li>			<li>Ветер: легкий ветер с северо-востока</li>		</ul>	</li>	<li><strong>Рейтинг рыбалки:</strong> 70% (хорошие условия для рыбалки)</li></ul>**<p>В целом, я бы сказал, что следующие три дня не идеально подходят для рыбалки из-за фазы луны и некоторых умеренных погодных условий. Однако День 3, похоже, является лучшим возможностью для рыбалки с растущей луной и лучшими условиями прилива.</p>**
+            <!DOCTYPE html><html><head>	<title>Результаты</title></head><body>	<h2>Результаты анализа условий для рыбалки в Израиле на 25-27 октября</h2>	<p>Общий балл за следующие три дня: <strong>55%</strong></p></body></html>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 23, 2024, 9:54 AM</p>
+        <p>Generated with AI Oct 24, 2024, 10:35 AM</p>
     </footer>
 </body>
 </html>
