--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **<h2>אינדקס דיג 3 ימים</h2>****<h3>יום 1: שני, 23 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח אחרון (לא אידיאלי לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-11:38 בבוקר  + גאות ב-3:49 אחר הצהריים  + שפל ב-11:05 בערב</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: 20.7 מעלות צלזיוס (69 מעלות פרנהייט)  + לחות: 25%  + רוח: רוח קלה מרכסון* <strong>דיג:</strong> 40% (תנאים מתונים, אך לא אידיאליים)**<h3>יום 2: שלישי, 24 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח אחרון (עדיין לא אידיאלי לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-8:10 בבוקר  + גאות ב-2:24 לפנות בוקר (בוקר מוקדם)  + שפל ב-10:24 בבוקר</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: צפוי לטפס ל-26.8 מעלות צלזיוס (80 מעלות פרנהייט) במהלך היום  + לחות: עדיין נמוכה למדי, סביב 25%  + רוח: רוח קלה מרכסון* <strong>דיג:</strong> 50% (תנאים טובים יותר מהיום הקודם, אך עדיין לא אידיאליים)**<h3>יום 3: רביעי, 25 באוקטובר</h3>*** <strong>שלב הירח:</strong> ירח ראשון (תנאים טובים לדייג)* <p>תחזית גאות ושפל ימי:  + שפל ב-9:45 בבוקר  + גאות ב-3:15 אחר הצהריים  + שפל ב-10:45 לפנות ערב</p>* <strong>תחזית מזג אוויר:</strong>  + טמפרטורה: 25.1 מעלות צלזיוס (77 מעלות פרנהייט)  + לחות: 64%  + רוח: רוח קלה* <strong>דיג:</strong> 70% (תנאים טובים לדייג)
+            **תנאי דיג: 25-27 באוקטובר**<h2>תחזית מזג אוויר</h2><p>שמשי וחם, עם שינויים לאורך הימים.</p><h3>25 באוקטובר (יום 1)</h3><ul>  <li>הגאות: 5.6 מ</li>  <li>ניקוד: 55%</li></ul><h3>26 באוקטובר (יום 2)</h3><ul>  <li>הגאות: 7.4 מ</li>  <li>ניקוד: 50%</li></ul><h3>27 באוקטובר (יום 3)</h3><ul>  <li>הגאות: 9.2 מ</li>  <li>ניקוד: 50%</li></ul><h2>תחזית כללית</h2><p>ניקוד כללי לימים הקרובים: 55%.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 23, 2024, 9:56 AM</p>
+        <p>Generated with AI Oct 24, 2024, 10:36 AM</p>
     </footer>
 </body>
 </html>
