--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            <!DOCTYPE html><html><head>	<title>Результаты</title></head><body>	<h2>Результаты анализа условий для рыбалки в Израиле на 25-27 октября</h2>	<p>Общий балл за следующие три дня: <strong>55%</strong></p></body></html>
+            **<h2>Рыбалка в Израиле на 26-28 октября</h2>****<h3>Оценки рыбалки за три дня</h3>*** **День 1: 26 октября**	+ <p>Морские условия: высота волн ожидается выше (до 1,06 метра), но все же относительно спокойной.</p>	+ <ul>		<li><strong>Приливы и отливы:</strong> прилив в 4:25 утра, отлив в 5:41 вечера (хорошо подходит для рыбалки во время изменения приливов).</li>		<li><strong>Погода:</strong> приятная погода с максимальной температурой 27,7°C и минимальной 16,6°C (хорошо подходит для занятий на свежем воздухе).</li>		<li><strong>Фазы луны:</strong> четверть луны (не идеально для рыбалки).</li>	</ul>	+ <p>Оценка: **70%** (спокойные морские условия, хорошие приливные модели, но не лучшая фаза луны)</p>* **День 2: 27 октября**	+ <p>Морские условия: высота волн снова снизится (до примерно 0,92 метра), а ветровые волны утихнут.</p>	+ <ul>		<li><strong>Приливы и отливы:</strong> прилив в 11:35 утра, отлив в 6:16 вечера (хорошо подходит для рыбалки во время изменения приливов).</li>		<li><strong>Погода:</strong> прохладная погода с максимальной температурой 27,1°C и минимальной 15,2°C (все еще приятна для занятий на свежем воздухе).</li>		<li><strong>Фазы луны:</strong> четверть луны (подобно вчерашнему дню).</li>	</ul>	+ <p>Оценка: **60%** (спокойные морские условия, хорошие приливные модели, но все еще не идеальная фаза луны)</p>* **День 3: 28 октября**	+ <p>Морские условия: значительных изменений в высоте волн или ветровых волнах не ожидается.</p>	+ <ul>		<li><strong>Приливы и отливы:</strong> прилив в 1:53 утра, отлив в 5:52 вечера (хорошо подходит для рыбалки во время изменения приливов).</li>		<li><strong>Погода:</strong> похожа на вчерашнюю прохладную погоду.</li>		<li><strong>Фазы луны:</strong> четверть луны (все еще не идеально).</li>	</ul>	+ <p>Оценка: **55%** (подобные условия, как и вчера, с немного более хорошей приливной моделью)</p>**<h3>Общая оценка</h3>*** <p>Общая оценка: **65%**</p>**<p>Обратите внимание, что эти оценки являются субъективными и основаны на общих предпочтениях в рыбалке. Лучшие места для рыбалки и время могут варьироваться в зависимости от конкретных местоположений и стилей рыбалки в Израиле.</p>**
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 24, 2024, 10:35 AM</p>
+        <p>Generated with AI Oct 25, 2024, 7:10 AM</p>
     </footer>
 </body>
 </html>
