--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **<h2>תנאי הדיג בשלושת הימים הבאים (26-28 באוקטובר) בישראל</h2>*** **<h3>26 באוקטובר:</h3>**	+ <p><strong>70% - תנאי הדיג</strong></p>		<ul>			<li>תנאי ים: גובה גלי הים צפוי לגדול (עד 1.06 מטרים), אך עדיין יחסית רגועים.</li>			<li>זרימה: זריקה נמוכה בשעה 4:25 בבוקר, זריקה גבוהה בשעה 5:41 אחר הצהריים.</li>			<li>מזג אוויר: מזג אוויר נעים עם מקסימום של 27.7 מעלות צלזיוס.</li>			<li>שלב הירח: ירח אחרון (לא אידיאלי לדייג).</li>		</ul>* **<h3>27 באוקטובר:</h3>**	+ <p><strong>60% - תנאי הדיג</strong></p>		<ul>			<li>תנאי ים: גובה גלי הים ימשיך לדעוך (עד כ-0.92 מטרים).</li>			<li>זריקה: זריקה נמוכה בשעה 11:35 בבוקר, זריקה גבוהה בשעה 6:16 אחר הצהריים.</li>			<li>מזג אוויר: דומה למזג האוויר הקריר של אתמול.</li>			<li>שלב הירח: ירח אחרון (עדיין לא אידיאלי).</li>		</ul>* **<h3>28 באוקטובר:</h3>**	+ <p><strong>55% - תנאי הדיג</strong></p>		<ul>			<li>תנאי ים: דומים למזג האוויר הקריר של אתמול.</li>			<li>זריקה: זריקה נמוכה בשעה 1:53 בבוקר, זריקה גבוהה בשעה 5:52 אחר הצהריים.</li>			<li>מזג אוויר: דומה למזג האוויר הקריר של אתמול.</li>			<li>שלב הירח: ירח אחרון (עדיין לא אידיאלי).</li>		</ul>**<h2>ציונים כוללים:</h2>*** <p><strong>65% - תנאי הדיג</strong></p>
+            80%
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 25, 2024, 7:11 AM</p>
+        <p>Generated with AI Oct 25, 2024, 5:15 PM</p>
     </footer>
 </body>
 </html>
