--- a/he.html
+++ b/he.html
@@ -84,11 +84,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            80%
+            ```<h2>Important Information</h2><h3>Detailed Description</h3><p>This is a sample text that will be wrapped with HTML tags.</p><ul>    <li><strong>Main Point 1:</strong> This is the first main point.</li>    <li><strong>Main Point 2:</strong> This is the second main point.</li>    <li><strong>Main Point 3:</strong> This is the third main point.</li></ul>```
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 25, 2024, 5:15 PM</p>
+        <p>Generated with AI Oct 26, 2024, 8:01 AM</p>
     </footer>
 </body>
 </html>
