--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **<h2>Рыбалка в Израиле с 28 по 30 октября</h2>*** **<h3>28 октября</h3>**	+ <p>Прилив: Низкий (0,13 м) в обеденный час, затем высокий (0,13 м) вечером - балл: 60%</p>	+ <ul>		<li><strong>Фаза луны:</strong> Убыльный полумесяц</li>		<li><strong>Состояние моря:</strong> спокойные волны (0,56 м), мягкие течения - балл: 80%</li>		<li><strong>Погода:</strong> приятная температура (20°C), солнечно и низкая влажность - балл: 90%</li>	</ul>	+ <p>Общий балл: 70% (умеренные условия)</p>* **<h3>29 октября</h3>**	+ <p>Прилив: Низкий (-0,11 м) в полночь, затем высокий (+0,12 м) утром, а затем снова низкий - балл: 70%</p>	+ <ul>		<li><strong>Фаза луны:</strong> все еще убытный полумесяц</li>		<li><strong>Состояние моря:</strong> немного более спокойные волны (0,54 м), мягкие течения - балл: 80%</li>		<li><strong>Погода:</strong> схожие с вчерашними условиями, с приятной температурой и солнечной погодой - балл: 90%</li>	</ul>	+ <p>Общий балл: 75% (умеренные условия)</p>* **<h3>30 октября</h3>**	+ <p>Прилив: Низкий (-0,13 м) в полночь, затем высокий (+0,13 м) утром, а затем снова низкий - балл: 70%</p>	+ <ul>		<li><strong>Фаза луны:</strong> все еще убытный полумесяц</li>		<li><strong>Состояние моря:</strong> схожие с вчерашними условиями, умеренные волны (0,56 м), мягкие течения - балл: 80%</li>		<li><strong>Погода:</strong> приятная температура (24°C), солнечно и низкая влажность - балл: 90%</li>	</ul>	+ <p>Общий балл: 75% (умеренные условия)</p>**<h2>Итоги</h2>*** **28 октября:** умеренные условия (70%)* **29 октября:** немного лучшие условия (75%)* **30 октября:** схожие с вчерашними условиями (75%)
+            **<h2>Рыбалка в Израиле</h2>*** **<h3>30 октября</h3>**	+ <p>Фаза луны: убывающая луна (40% оценка, не идеально)</p>	+ <ul>		<li><strong>Тида:</strong> высокий прилив рано утром и поздно вечером</li>		<li><strong>Морские прогнозы:</strong> спокойные морские условия с волнами высотой около 0,5 метров</li>		<li><strong>Прогноз погоды:</strong> приятная погода с температурой около 24,7°C</li>	</ul>	+ <p>Общая оценка: **70/100** (Хорошие-приемные условия для рыбалки, но все еще подвержены влиянию фазы луны)</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 28, 2024, 8:28 AM</p>
+        <p>Generated with AI Oct 29, 2024, 6:35 PM</p>
     </footer>
 </body>
 </html>
