--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **Навигация по рыбной ловле в Израиле**### Оценка дня за 31 октября*   **Фаза луны:** 20% (Новая Луна может повлиять на поведение рыбы)*   **Прогноз прилива:**    *   Низкий прилив: 80%    *   Высокий прилив: 40%     *   Средняя оценка: 60%*   **Морской прогноз:**     *   Высота волн: 70%     *   Направление ветра и океанские течения: 80%     *   Средняя оценка: 75%*   **Прогноз погоды:** 90% *   **Общая оценка:** 70%### Оценка дня за 1 ноября*   **Фаза луны:** 20% (состояние Новой Луны все еще влияет на поведение рыбы)*   **Прогноз прилива:**    *   Низкий прилив: 60%    *   Высокий прилив: 40%    *   Средняя оценка: 50%*   **Морской прогноз:**     *   Высота волн: 80%     *   Направление ветра и океанские течения: 90%     *   Средняя оценка: 85%*   **Прогноз погоды:** 95% *   **Общая оценка:** 75%### Оценка дня за 2 ноября*   **Фаза луны:** 20% (состояние Новой Луны все еще влияет на поведение рыбы)*   **Прогноз прилива:**    *   Низкий прилив: 80%    *   Высокий прилив: 40%     *   Средняя оценка: 60%*   **Морской прогноз:**     *   Высота волн: 70%     *   Направление ветра и океанские течения: 90%     *   Средняя оценка: 80%*   **Прогноз погоды:** 85% *   **Общая оценка:** 75%### Результаты*   Сегодня (31 октября) рыбалка хороша с оценкой 70%. Состояние Новой Луны может повлиять на поведение рыбы, но условия прилива и морские течения относительно комфортные.*   Завтра (1 ноября) отличный день для рыбалки с оценкой 75%! Спокойная погода и умеренные морские течения создают идеальные условия для ловли рыбы.*   Послезавтра (2 ноября) также хорош с оценкой 75%. Состояние Новой Луны все еще может повлиять на поведение рыбы, но относительно низкий прилив, спокойные волны и приятная погода делают это хорошим днем для рыбалки.
+            **Результаты оценки условий для рыбалки:**<h2>Оценка условий для рыбалки</h2><p>На основании предоставленной информации я оцениваю условия для рыбалки на сегодня и следующие два дня.</p><ul>  <li><strong>Сегодня (2024-11-01):</strong> Общий балл за сегодня: **60%**</li>  <li><strong>Завтра (2024-11-02):</strong> Общий балл за завтра: **55%**</li>  <li><strong>Следующий день (2024-11-03):</strong> Общий балл за следующий день: **70%**</li></ul><p>Помните, что эти оценки основаны на общих рекомендациях и могут не отражать конкретное поведение рыбы или местные условия. Всегда консультируйтесь с местными специалистами или обращайте внимание на отчеты о рыбалке, прежде чем отправляться на рыбалку.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Oct 31, 2024, 11:00 AM</p>
+        <p>Generated with AI Nov 1, 2024, 4:02 AM</p>
     </footer>
 </body>
 </html>
