--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            **Результаты оценки условий для рыбалки:**<h2>Оценка условий для рыбалки</h2><p>На основании предоставленной информации я оцениваю условия для рыбалки на сегодня и следующие два дня.</p><ul>  <li><strong>Сегодня (2024-11-01):</strong> Общий балл за сегодня: **60%**</li>  <li><strong>Завтра (2024-11-02):</strong> Общий балл за завтра: **55%**</li>  <li><strong>Следующий день (2024-11-03):</strong> Общий балл за следующий день: **70%**</li></ul><p>Помните, что эти оценки основаны на общих рекомендациях и могут не отражать конкретное поведение рыбы или местные условия. Всегда консультируйтесь с местными специалистами или обращайте внимание на отчеты о рыбалке, прежде чем отправляться на рыбалку.</p>
+            **<h2>Рыбалка в Израиле с 2 по 4 ноября</h2>****<h3>Оценка условий для рыбалки каждый день:</h3>*** **<strong>2 ноября</strong>**	+ <p>Прогноз приливов: Сегодня высокий прилив будет на 11 см выше среднего уровня моря (8:08), а низкий - на 13 см ниже (1:53). Ночной высокий прилив будет на 18 см выше среднего уровня.</p>	+ <p>Высота волн: спокойные волны, максимальная высота 0,78 метра (2,56 фута).</p>	+ <p>Прогноз погоды: приятная температура, легкий ветер и отсутствие осадков.</p>	+ <ul>		<li><strong>Оценка рыбалки:</strong> 75%</li>	</ul>* **<strong>3 ноября</strong>**	+ <p>Прогноз приливов: Завтра высокий прилив будет на 10 см выше среднего уровня моря (8:35), а еще один высокий прилив - на 17 см выше (14:32). Ночной низкий прилив будет на 16 см ниже среднего уровня.</p>	+ <p>Высота волн: аналогично предыдущему дню, максимальная высота 0,78 метра (2,56 фута).</p>	+ <p>Прогноз погоды: высокая температура 21,6°C, легкий ветер и много солнца.</p>	+ <ul>		<li><strong>Оценка рыбалки:</strong> 80%</li>	</ul>* **<strong>4 ноября</strong>**	+ <p>Прогноз приливов: На следующий день низкий прилив будет на 16 см ниже среднего уровня моря (3:08), а высокий - на 8 см выше (9:04). Вечером еще один высокий прилив на 16 см выше.</p>	+ <p>Высота волн: спокойные волны, максимальная высота 0,66 метра (2,17 фута).</p>	+ <p>Прогноз погоды: высокая температура 21,5°C, легкий ветер и много солнца.</p>	+ <ul>		<li><strong>Оценка рыбалки:</strong> 85%</li>	</ul>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Nov 1, 2024, 4:02 AM</p>
+        <p>Generated with AI Nov 2, 2024, 4:02 AM</p>
     </footer>
 </body>
 </html>
