--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            Here is the content wrapped with HTML tags and showing only the results:<h2>Рыбачья оценка за период с 5 по 7 ноября</h2><h3>Понедельник, 5 ноября</h3><p><strong>Фаза луны:</strong> растущая луна (хорошо)</p><p><strong>Приливы:</strong> высокий прилив в 9:04 утра и 8:59 вечера (отлично)</p><p><strong>Морские условия:</strong> волны до 0,88 метра, доминирующий направление волн около 295° (хорошо)</p><p><strong>Погода:</strong> приятная температура, легкий ветер, отсутствие осадков (отлично)</p><p><strong>Рыбачья оценка за понедельник:</strong> <strong>85%</strong></p><h3>Вторник, 6 ноября</h3><p><strong>Фаза луны:</strong> растущая луна (хорошо)</p><p><strong>Приливы:</strong> высокий прилив в 9:37 утра и 8:31 вечера (отлично)</p><p><strong>Морские условия:</strong> волны до 1,2 метра, доминирующий направление волн около 325° (очень хорошо)</p><p><strong>Погода:</strong> приятная температура, легкий ветер, отсутствие осадков (отлично)</p><p><strong>Рыбачья оценка за вторник:</strong> <strong>90%</strong></p><h3>Среда, 7 ноября</h3><p><strong>Фаза луны:</strong> растущая луна (хорошо)</p><p><strong>Приливы:</strong> низкий прилив в 2:40 дня и 3:07 вечера (средний)</p><p><strong>Морские условия:</strong> волны до 1,08 метра, доминирующий направление волн около 295° (очень хорошо)</p><p><strong>Погода:</strong> приятная температура, легкий ветер, отсутствие осадков (отлично)</p><p><strong>Рыбачья оценка за среду:</strong> <strong>80%</strong></p><ul>  <li><h3>Рыбачья оценка за период с 5 по 7 ноября:</h3></li>  <li><p><strong>Понедельник, 5 ноября:</strong> <strong>85%</strong></p></li>  <li><p><strong>Вторник, 6 ноября:</strong> <strong>90%</strong></p></li>  <li><p><strong>Среда, 7 ноября:</strong> <strong>80%</strong></p></li></ul>
+            Here is the content wrapped with HTML h2, h3, p, ul, li, strong tags, showing only the results:<h2>Результаты оценки дней для рыбалки</h2><ul>  <li>    <strong>Понедельник (2024-11-05)</strong>    Оценка: **58%** (Удовлетворительные условия, но прилив может быть слишком низким к вечере)  </li>  <li>    <strong>Вторник (2024-11-06)</strong>    Оценка: **83%** (Хорошие условия, с растущей высотой волн и благоприятной погодой)  </li>  <li>    <strong>Среда (2024-11-07)</strong>    Оценка: **88%** (Отличные условия для рыбалки, с растущей высотой волн и благоприятной погодой)  </li></ul>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Nov 4, 2024, 4:02 AM</p>
+        <p>Generated with AI Nov 5, 2024, 4:02 AM</p>
     </footer>
 </body>
 </html>
