--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            Here is the content wrapped with HTML h2, h3, p, ul, li, strong tags, showing only the results:<h2>Результаты оценки дней для рыбалки</h2><ul>  <li>    <strong>Понедельник (2024-11-05)</strong>    Оценка: **58%** (Удовлетворительные условия, но прилив может быть слишком низким к вечере)  </li>  <li>    <strong>Вторник (2024-11-06)</strong>    Оценка: **83%** (Хорошие условия, с растущей высотой волн и благоприятной погодой)  </li>  <li>    <strong>Среда (2024-11-07)</strong>    Оценка: **88%** (Отличные условия для рыбалки, с растущей высотой волн и благоприятной погодой)  </li></ul>
+            <h2>Рыбалка в Израиле: Оценки для завтрашнего и послезавtrakого дней</h2><h3>Сегодня (6 ноября):</h3><p>Фаза луны: растущая луна (хорошо подходит для рыбалки)</p><ul>  <li>Ранний утренний прилив (-0,12 метра): не идеален</li>  <li>Полудenny priлив (0,03 метра): хорошие условия</li>  <li>Поздний дневной priлив (-0,06 метра): не идеален</li>  <li>Вечерний прилив (0,12 метра): хорошие условия</li></ul><p>Оценка: 60% (условия в середине дня благоприятны, но другие приливы могут быть не идеальными)</p><h3>Завтра (7 ноября):</h3><p>Фаза луны: растущая луна</p><ul>  <li>Ранний утренний прилив (-0,09 метра): не идеален</li>  <li>Полудenny priliv (0,01 метра): хорошие условия</li>  <li>Поздний дневной priliv (-0,03 метра): не идеален</li>  <li>Вечерний priлив (0,09 метра): хорошие условия</li></ul><p>Оценка: 70% (условия в середине дня благоприятны, но сильный ветер может сделать рыбалку сложной)</p><h3>Послезавтра (8 ноября):</h3><p>Фаза луны: растущая луна</p><ul>  <li>Ранний утренний прилив (-0,01 метра): хорошие условия</li>  <li>Полудenny priliv (0,01 метра): хорошие условия</li>  <li>Поздний дневной priliv (-0,00 метра): хорошие условия</li>  <li>Вечерний priлив (-0,01 метра): не идеален</li></ul><p>Оценка: 80% (хорошие условия на весь день)</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Nov 5, 2024, 4:02 AM</p>
+        <p>Generated with AI Nov 6, 2024, 4:02 AM</p>
     </footer>
 </body>
 </html>
