--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </header>
     <main>
         <section id="fishing-score">
-            <h2>Рыболовный балл на этой неделе</h2><p>Я дам вам рыболовный балл для каждого дня, учитывая фазу луны, прогноз приливов и отливов, а также погодные условия.</p><ul>  <li><strong>Сегодня (13 ноября)</strong></li>  <ul>    <li>Рыболовный балл: 40%</li>    <li>Обоснование: Луна находится в фазе растущей gibbous, низкий прилив днем и высокий прилив поздним вечером.</li>  </ul>  <li><strong>Завтра (14 ноября)</strong></li>  <ul>    <li>Рыболовный балл: 60%</li>    <li>Обоснование: Прогноз приливов на завтра предполагает более низкие высокие приливы утром и поздним вечером.</li>  </ul>  <li><strong>Послезавтра (15 ноября)</strong></li>  <ul>    <li>Рыболовный балл: 30%</li>    <li>Обоснование: Увеличенная высота волн и направление ветра с запада могут делить рыбалку.</li>  </ul></ul><p><strong>Примечание:</strong> Эти баллы субъективны и основаны на общих рекомендациях. Ваши конкретные местоположение и тип рыбалки могут повлиять на их точность.</p>
+            <h2>Оценка условий рыбалки</h2><ul>  <li>14 ноября: 40%</li>  <ul>    <li>Высый прилив может сделать ловлю рыбы сложной, низкий прилив более благоприятен.</li>    <li>Lуна в фазе растущей четверть не обязательно влияет на условия рыбалки.</li>  </ul></li><li>15 ноября: 60%</li><ul>  <li>Уровень волны умеренный, что может создать волнующие воды и сделать ловлю рыбы менее идеальной.</li>  <li>Благоприятные приливно-отливные условия и относительно спокойный ветер делают этот день более подходящим для рыбалки.</li></ul><li>16 ноября: 80%</li><ul>  <li>Крупная волна высотой около 0,52 метра может быть сложным из-за суровых вод.</li>  <li>Общие условия seem относительно благоприятными по сравнению с предыдущими днями.</li></ul></ul><h3>Понять означает каждый балл?</h3><ul>  <li>0-29: Плохие условия</li>  <li>30-49: Средние условия</li>  <li>50-69: Хорошие условия</li>  <li>70-89: Отличные условия</li>  <li>90-100: Исключительные условия</li></ul><h3>Обратите внимание:</h3><p>Эти оценки предназначены для общего представления об условиях рыбалки и не должны считаться инвестиционным советом или гарантией успеха.</p>
         </section>
     </main>
     <footer>
-        <p>Generated with AI Nov 13, 2024, 4:01 AM</p>
+        <p>Generated with AI Nov 14, 2024, 4:01 AM</p>
     </footer>
 </body>
 </html>
